{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "d122ddde-b964-48d4-b574-c49aa92ab954",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "d355d909-dde5-4b80-8222-6ae163600f29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "25022c55-c822-4daf-8924-8f0cb539f420",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateBody",
                    "type": "Value",
                    "id": "b9917967-a14b-4a0f-bdbb-3fc90b334934",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateBody2",
                    "type": "Value",
                    "id": "e3698b9f-c1e9-4a39-9fad-26bd40ea58b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select_Hip",
                    "type": "Button",
                    "id": "c2c0744a-2df2-4d75-bf40-1978706f60cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ShoulderRight",
                    "type": "Button",
                    "id": "70a3dec8-ceeb-4533-88fd-532ba42cddf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ShoulderLeft",
                    "type": "Button",
                    "id": "3a190ea6-7738-46e1-a2b2-4b56991b19fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ElbowRight",
                    "type": "Button",
                    "id": "4838cb8d-a475-4d63-8a7b-ac3810ab623a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ElbowLeft",
                    "type": "Button",
                    "id": "7c9f6b6b-a3ae-4242-a19e-8d14fd6b7754",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_KneeRight",
                    "type": "Button",
                    "id": "ee73f7c0-47e2-43d3-9b54-a5fe8d481aa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_KneeLeft",
                    "type": "Button",
                    "id": "c006ac64-c53f-454f-8446-c6e7a0938398",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_FootRight",
                    "type": "Button",
                    "id": "6e639728-25ff-4082-ace9-705a25bde0ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_FootLeft",
                    "type": "Button",
                    "id": "b717a032-823a-4691-998d-cc56369d332f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_Hip1",
                    "type": "Button",
                    "id": "0be87e6e-4e51-49eb-abee-e65d4f77c9fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ShoulderRight1",
                    "type": "Button",
                    "id": "51984bb9-7ed2-4373-aec5-d42bbbe3b276",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ShoulderLeft1",
                    "type": "Button",
                    "id": "641bf7b7-a6c9-470b-b892-2135c3193fe5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ElbowRight1",
                    "type": "Button",
                    "id": "f77ae529-7c61-4d37-aaaf-b6eaa2b37ff6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_ElbowLeft1",
                    "type": "Button",
                    "id": "e43fff7e-3fc8-44b2-bbae-8129a138d66b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_KneeRight1",
                    "type": "Button",
                    "id": "fa0406d7-e0ac-4854-9fe3-427ae90c798a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_KneeLeft1",
                    "type": "Button",
                    "id": "24cffa66-c85c-467c-98f0-da8a1565f9a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_FootRight1",
                    "type": "Button",
                    "id": "1467c643-2c7c-4637-9961-8e54b73a2597",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select_FootLeft1",
                    "type": "Button",
                    "id": "ca7258c0-f17b-4153-b084-b93eb0362844",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73f65c99-39e1-4c59-b51a-c46c04477617",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "393d6511-28ca-4d1a-b2c4-e05d1316b506",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f2077c3-c4c8-43a3-939c-a0bdaef2dfbf",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "538a2fc0-5ea5-44ce-89e3-da2ab48832c7",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f609578-0da9-4cae-a877-d4033dda3505",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3a2b76e-b10b-4e49-b3c3-af2dfd75c59f",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "c935d546-ff5b-404d-829f-d1166ca03eb2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e61d6f20-b8dd-4221-9fb4-72f71905a374",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2924975a-6854-432a-b172-d82dd95bebb0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e7ad6991-6a73-4187-b3c5-33338a65fe0f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "02793580-4961-43e3-b1e7-8d367b7900ef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "66ef734f-f187-4e1e-a14d-3154db33efb0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01006134-36fe-4a25-ae2a-0314e197d7d7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ac0093dc-6ab1-4208-8f41-52da30c8e03d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "22c3b447-aead-485d-8d0f-1fa8ca79b778",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "653ec546-e71a-49ef-9118-771b453dcd5a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBody2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "655ba1a5-5958-49d9-b0dc-78c0bb36077f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_Hip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "695096e1-3389-4494-92ff-1649a0c69ec4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_KneeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d96d9a57-650e-4ede-82b8-85c3eb14dfa9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_FootRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1621c6c-8d2e-447d-b57d-230de3d1d668",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_FootLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "156b38c3-e927-4c6c-af31-53440f457904",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_Hip1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5077ad1f-95d7-42d4-8003-50576fd7dc68",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ShoulderRight1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c60d90d-d51f-45a1-a448-24fbd6006b07",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_KneeRight1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7970c2e-14de-4d3e-83d9-47c4291c9414",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ElbowRight1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97ef37ed-d368-47c8-87e8-ce09b9c18df7",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ElbowLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22df5234-7d13-469c-a874-22dbe5b588ee",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_FootLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15921340-4cbd-472b-aff7-bc0ba60e3ebc",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_FootRight1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d62c6027-185a-4cc1-b1a3-1b208ae4cbd8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ShoulderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca43a6be-82eb-4e7b-8192-aad7f92c4129",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ElbowLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "764c1d46-5a80-417f-b11b-dbdb56025f81",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ShoulderRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d290d4d7-896f-470f-8437-594e5cbe9033",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ElbowRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6c7c98f-238a-4946-8481-a4fa97639a27",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_KneeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56052157-50b8-4604-b01f-5d7bcb281a58",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_ShoulderLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd6d8dd9-3664-45cf-95c0-1830b6fb6a0f",
                    "path": "<Keyboard>/;",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_KneeLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}